# meditate-cli

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  install.ps1  install.sh
.github/: meditate.rb.tpl
.github/workflows/: ci.yml  pages.yml  release.yml
crates/meditate-core/: Cargo.toml
crates/meditate-core/src/: breath.rs  caps.rs  lib.rs  palette.rs  title.rs
crates/meditate-core/src/render/: cell_gradient.rs  mod.rs  mono.rs  orb.rs  starfield.rs
crates/meditate-wasm/: Cargo.toml
crates/meditate-wasm/src/: lib.rs
demo/: meditate.tape
docs/brainstorms/: 2026-06-06-constellation-appearance-requirements.md  meditate-cli-requirements.md  meditate-web-terminal-requirements.md
docs/plans/: 2026-06-02-001-feat-meditate-terminal-breathing-cli-plan.md  2026-06-03-001-feat-meditate-web-terminal-plan.md  2026-06-06-001-feat-constellation-appearance-stage1-plan.md
src/: cli.rs  config.rs  door.rs  keymap.rs  lib.rs  main.rs  paths.rs  session.rs  state.rs  streak.rs  term.rs  title.rs  wait.rs
src/audio/: bells.rs  mod.rs  output.rs  voice.rs
src/integration/: mod.rs
src/pack/: mod.rs  soundscape.rs
src/render/: cell_gradient.rs  graphics.rs  mod.rs  mono.rs  orb.rs
tests/: audio_bell.rs  audio_mixer.rs  breath_cycle.rs  cli_help.rs  cli_surface.rs  config.rs  keymap.rs  nudge.rs  orb_render.rs  pack_offline.rs  palette.rs  render_degradation.rs  session_lifecycle.rs  streak.rs  voice_schedule.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: build-wasm.sh  og-pixel.html  og.html
web/src/: ansi.ts  audio.test.ts  audio.ts  boot.test.ts  boot.ts  commands.test.ts  constellation.test.ts  constellation.ts  deeplink.test.ts  deeplink.ts  favicon.ts  loop.test.ts  loop.ts  main.ts  mobile.ts  motd.ts  orb-canvas.ts  patterns.ts  repl.test.ts  repl.ts  store.test.ts  store.ts  style.css  terminal.ts
web/src/commands/: audio.ts  discovery.ts  help.ts  index.ts  streak.ts  types.ts
