[package]
name = "meditate"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "A terminal breathing companion — paced breathing, soundscapes, and voice guides in your terminal."
repository = "https://github.com/momentmaker/meditate-cli"
keywords = ["meditation", "breathing", "tui", "cli", "wellness"]
categories = ["command-line-utilities"]

[features]
default = []
# Real audio output via cpal. Off by default so the core builds and tests
# headlessly; enable on a machine with an audio device for playback.
audio = ["dep:cpal", "dep:coreaudio-sys"]

[[bin]]
name = "meditate"
path = "src/main.rs"

[lib]
name = "meditate"
path = "src/lib.rs"

[dependencies]
# Several deps pin to MSRV-safe (Rust 1.82) versions: newer releases of clap,
# indexmap, and winnow require the unstable edition2024 Cargo feature.
clap = { version = "=4.5.20", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
indexmap = "=2.6.0"
crossterm = "0.28"
fs2 = "0.4"
cpal = { version = "0.15", optional = true }

# cpal pulls coreaudio-sys on macOS; pin below the edition2024 bump for MSRV 1.82.
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = "=0.2.16", optional = true }

[dev-dependencies]
tempfile = "3"
