# The root stays the `meditate` CLI package and is also the workspace root, so
# the existing release pipeline, install scripts, and Homebrew tap are unchanged.
# `meditate-core` holds the pure, wasm-buildable engine; `meditate-wasm` is the
# browser façade. Profiles are read only from this root, so the wasm crate sets
# panic=abort via RUSTFLAGS at build time, not a member [profile].
[workspace]
members = ["crates/meditate-core", "crates/meditate-wasm"]

[package]
name = "meditate"
version = "0.2.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "A terminal breathing companion — paced breathing, soundscapes, and voice guides in your terminal."
repository = "https://github.com/walktalkmeditate/meditate-cli"
keywords = ["meditation", "breathing", "tui", "cli", "wellness"]
categories = ["command-line-utilities"]

[features]
default = []
# Real audio output via cpal + decoding via symphonia. Off by default so the
# core builds and tests headlessly; enable on a machine with an audio device.
audio = ["dep:cpal", "dep:coreaudio-sys", "dep:symphonia"]
# Network pack downloads via ureq. Off by default; release builds enable it.
download = ["dep:ureq", "dep:idna_adapter"]

[[bin]]
name = "meditate"
path = "src/main.rs"

[lib]
name = "meditate"
path = "src/lib.rs"

[dependencies]
# The pure breath/orb/palette/title engine, shared with the WASM web build.
meditate-core = { path = "crates/meditate-core" }
# Several deps pin to MSRV-safe (Rust 1.82) versions: newer releases of clap,
# indexmap, and winnow require the unstable edition2024 Cargo feature.
clap = { version = "=4.5.20", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
indexmap = "=2.6.0"
crossterm = "0.28"
fs2 = "0.4"
serde_json = "1"
cpal = { version = "0.15", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["aac", "isomp4", "ogg", "vorbis", "wav", "pcm"] }
ureq = { version = "2", optional = true }
# Pinned below the edition2024 bump for the 1.82 MSRV (pulled by ureq -> url).
idna_adapter = { version = "=1.2.0", optional = true }

# cpal pulls coreaudio-sys on macOS; pin below the edition2024 bump for MSRV 1.82.
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = "=0.2.16", optional = true }

# Used to signal a wrapped --until command's whole process group on cancel, so
# its children (cargo -> rustc, …) die too — not just the launched shell.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Note: panic is deliberately left as "unwind" (not "abort") so the session's
# RAII TerminalGuard runs on a panic and restores the terminal.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
